[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.static]
dev-mode = true
dev-mode-dirs = ["."]

[project]
name = "ud-tools.lib"
version = "0.0.1"
authors = [
  { name="Ludovica Pannitto", email="ellepannitto@gmail.com" },
  { name="Arianna Masciolini"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.scripts]
conll2ske = "tools.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ud-tools"]